--- a/EFI/OC/oldConfig.plist
+++ b/EFI/OC/oldConfig.plist
@@ -1155,7 +1155,7 @@
                     <key>SystemAudioVolume</key>
                     <data>Rg==</data>
                     <key>boot-args</key>
-                    <string>keepsyms=1 -wegnoigpu</string>
+                    <string>agdpmod=pikera keepsyms=1 -wegnoigpu</string>
                     <key>csr-active-config</key>
                     <data>AAAAAA==</data>
                     <key>prev-lang:kbd</key>
@@ -1225,13 +1225,13 @@
                 <key>AdviseFeatures</key>
                 <false/>
                 <key>MLB</key>
-                <string>F5K023303GUK3F71F</string>
+                <string>F5K024270GUK3F7JC</string>
                 <key>MaxBIOSVersion</key>
                 <false/>
                 <key>ProcessorType</key>
                 <integer>0</integer>
                 <key>ROM</key>
-                <data>AOJpZWF0</data>
+                <data>bUr+Pfmd</data>
                 <key>SpoofVendor</key>
                 <false/>
                 <key>SystemMemoryStatus</key>
@@ -1239,9 +1239,9 @@
                 <key>SystemProductName</key>
                 <string>MacPro7,1</string>
                 <key>SystemSerialNumber</key>
-                <string>F5KCTZYQP7QM</string>
+                <string>F5KCVZZDP7QM</string>
                 <key>SystemUUID</key>
-                <string>2D63BC0E-C449-4B8C-B048-D81DA0DB280D</string>
+                <string>768064F8-C7D4-4615-930A-C89D085E5AA2</string>
             </dict>
             <key>UpdateDataHub</key>
             <true/>
