--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1145,6 +1145,8 @@
                 <dict>
                     <key>revcpu</key>
                     <integer>1</integer>
+                    <key>revcpuname</key>
+                    <string>13th Gen Intel(R) Core(TM) i5-13400F</string>
                     <key>rtc-blacklist</key>
                     <data></data>
                 </dict>
@@ -1174,6 +1176,7 @@
                 <array>
                     <string>rtc-blacklist</string>
                     <string>revcpu</string>
+                    <string>revcpuname</string>
                 </array>
                 <key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
                 <array>
